add header icon span

--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
                 <div class="header_icon">
                   <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
                   <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+                  <span>0</span>
                 </div>
         
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
