--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <div class="header_icon">
             <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+            <span>0</span>
           </div>
 
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -79,6 +80,7 @@
           </div>
         </nav>
       </div>
+
       <!-- Top Banner -->
       <div class="top_banner">
         <img class="center_logo" src="./Logo/logo_white.svg" alt="" />
