--- a/login.html
+++ b/login.html
@@ -56,6 +56,7 @@
           <div class="header_icon">
             <a href="login.html"><i class="fas fa-user"></i></a>
             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
+            <span>0</span>
             <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
           </div>
         </nav>
