--- a/product.html
+++ b/product.html
@@ -46,7 +46,8 @@
           <div class="header_icon">
             <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
+            <span>0</span>  
+        </div>
 
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
