--- a/bar.html
+++ b/bar.html
@@ -105,7 +105,7 @@
       <!-- world class vedio -->
       <div class="embed-container">
         <iframe
-          src="https://www.youtube.com/embed/-QEh1VzrxhA?rel=0&autoplay=1&loop=1&playlist=-QEh1VzrxhA"
+          src="https://www.youtube.com/embed/-QEh1VzrxhA?autoplay=1&mute=1&loop=1&playlist=-QEh1VzrxhA"
           frameborder="”0″"
           allow="autoplay; encrypted-media"
           allowfullscreen
