--- a/product.html
+++ b/product.html
@@ -46,14 +46,14 @@
           <div class="header_icon">
             <a id="myBtn" href="#"><i class="fas fa-user"></i></a>
             <a href="list.html"><i class="fas fa-shopping-cart"></i></a>
-            <span>0</span>  
-        </div>
+            <span>0</span>
+          </div>
 
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
 
-          <!-- The Modal -->
+          <!-- The Modal logoin -->
           <div id="myModal" class="modal">
             <div class="modal-content">
               <span class="close">&times;</span>
@@ -77,6 +77,28 @@
               </div>
             </div>
           </div>
+
+          <!-- list cart -->
+          <div class="listCart">
+            <div class="list-item">
+                <img src="./Product/Product pic/product-2.png" id="item-img" alt="">
+                <div class="list-text">
+                    <p id="list-item-title">
+                        <span>品名</span>
+                        <span id="list-item-name" class="list-item-name">手工醉梅</span>
+                    </p>
+                </div>
+                <a href="#" id="list-item-remove" class="list-item-remove">
+                    <i class="far fa-trash-alt"></i>
+                </a>
+            </div>
+          </div>
+
+
+
+
+
+        
         </nav>
       </div>
 
