amend list cart

--- a/product.html
+++ b/product.html
@@ -81,24 +81,35 @@
           <!-- list cart -->
           <div class="listCart">
             <div class="list-item">
-                <img src="./Product/Product pic/product-2.png" id="item-img" alt="">
-                <div class="list-text">
-                    <p id="list-item-title">
-                        <span>品名</span>
-                        <span id="list-item-name" class="list-item-name">手工醉梅</span>
-                    </p>
-                </div>
-                <a href="#" id="list-item-remove" class="list-item-remove">
-                    <i class="far fa-trash-alt"></i>
-                </a>
+              <img
+                src="./Product/Product pic/product-2.png"
+                id="item-img"
+                alt=""
+              />
+              <div class="list-text">
+                <p id="list-item-title">
+                  <span>品名</span>
+                  <span id="list-item-name" class="list-item-name"
+                    >手工醉梅</span
+                  >
+                </p>
+              </div>
+              <a href="#" id="list-item-remove" class="list-item-remove">
+                <i class="far fa-trash-alt"></i>
+              </a>
+            </div>
+
+            <hr />
+
+            <div>
+              <button class="sendBtn" type="button">送出詢問單</button>
+            </div>
+            <div>
+              <button class="keepBtn" type="button">
+                <a href="product.html">繼續瀏覽</a>
+              </button>
             </div>
           </div>
-
-
-
-
-
-        
         </nav>
       </div>
 
