update send btn

--- a/product.html
+++ b/product.html
@@ -102,12 +102,9 @@
             <hr />
 
             <div>
-              <button class="sendBtn" type="button">送出詢問單</button>
-            </div>
-            <div>
-              <button class="keepBtn" type="button">
-                <a href="product.html">繼續瀏覽</a>
-              </button>
+              <input type="submit" name="sendBt" value="送出詢問單" style="">
+              <!-- <button class="sendBtn" type="submit">送出詢問單</button> -->
+              <button class="keepBtn" type="button"><a href="product.html">繼續瀏覽</a></button>
             </div>
           </div>
         </nav>
