update background color

--- a/product.html
+++ b/product.html
@@ -102,7 +102,7 @@
             <hr />
 
             <div>
-              <input type="submit" name="sendBt" value="送出詢問單" style="">
+              <input type="submit" name="sendBt" value="送出詢問單" class="sendBtn">
               <!-- <button class="sendBtn" type="submit">送出詢問單</button> -->
               <button class="keepBtn" type="button"><a href="product.html">繼續瀏覽</a></button>
             </div>
