amend product list 直排 css html

--- a/product.html
+++ b/product.html
@@ -123,7 +123,7 @@
               <strong class="list-total-title">Total</strong>
               <span class="list-total-qty">2</span>
             </div>
-            
+
             <div class="send-Btn">
               <input
                 type="submit"
@@ -136,7 +136,6 @@
                 <a href="product.html">繼續瀏覽</a>
               </button>
             </div>
-
           </div>
         </nav>
       </div>
@@ -155,35 +154,35 @@
       <div class="productList">
         <ul class="productListInner">
           <li class="productListInnerText">
-            <a href="#ume1">
+            <a href=".ume1">
               <img src="./Product/Product pic/product-2.png" alt="" />
               <p class="productTitle">手工酒梅</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
-            <a href="#ume2">
+            <a href=".ume2">
               <img src="./index/index product/2.png" alt="" />
               <p class="productTitle">清酒梅酒</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
-            <a href="#ume3">
+            <a href=".ume3">
               <img src="./index/index product/3.png" alt="" />
               <p class="productTitle">威士忌梅酒</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
-            <a href="#ume4">
+            <a href=".ume4">
               <img src="./index/index product/4.png" alt="" />
               <p class="productTitle">燒灼梅酒</p>
               <i class="fas fa-angle-double-down"></i>
             </a>
           </li>
           <li class="productListInnerText">
-            <a href="#ume5">
+            <a href=".ume5">
               <img src="./index/index product/5.png" alt="" />
               <p class="productTitle">泡盛梅酒</p>
               <i class="fas fa-angle-double-down"></i>
@@ -192,236 +191,213 @@
         </ul>
       </div>
 
-      <!-- product list 手工醉梅 -->
-      <div class="mainProduct" id="ume1">
-        <div class="item">
-          <div class="itemInnerPic">
-            <img class="ume" src="./Product/Product pic/product-2.png" alt="" />
-          </div>
+      <!-- product list 直排 手工醉梅 -->
+      <div class="itemContainer">
+        <div class="ume1" id="mainProduct">
+          <img
+            class="ume"
+            src="./Product/Product pic/product-2.png"
+            alt="ume"
+          />
           <div class="itemInnerText">
             <h3>手工醉梅</h3>
             <p>
               採用100%國產青梅 ，果肉厚實，是一款美味的梅子。<br />
               將其浸泡在糖和酒精中大約需要一年時間。<br />
               可以享受散發出梅子香氣的濃郁風味。
-              <br /><br />
-              | 商品規格 |
-              <br /><br />
             </p>
-            <table>
-              <tr>
-                <th>原料</th>
-                <td>梅、砂糖、酒精</td>
-              </tr>
-              <tr>
-                <th>容量</th>
-                <td>240ml</td>
-              </tr>
-              <tr>
-                <th>酒精濃度</th>
-                <td>17%</td>
-              </tr>
-              <tr>
-                <th>產地</th>
-                <td>台灣</td>
-              </tr>
-            </table>
-            <p class="itemInnerTextWarning">
-              本商品不開放網路銷售，如欲洽詢或購買，請加入詢問清單
-            </p>
-            <button class="btn btn-primary shop-item-btn">
-              加入清單
-            </button>
+            <div class="itemSpec">
+              <p class="itemSpecTitle">| 商品規格 |</p>
+              <table>
+                <tr>
+                  <th>原料</th>
+                  <td>梅、砂糖、酒精</td>
+                </tr>
+                <tr>
+                  <th>容量</th>
+                  <td>240ml</td>
+                </tr>
+                <tr>
+                  <th>酒精濃度</th>
+                  <td>17%</td>
+                </tr>
+                <tr>
+                  <th>產地</th>
+                  <td>台灣</td>
+                </tr>
+              </table>
+              <p class="itemInnerTextWarning">
+                本商品  不開放網路銷售，欲洽詢或購買，請加入詢問清單
+              </p>
+              <button class="btn btn-primary shop-item-btn">加入清單</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- product list 清酒梅酒 -->
-      <div class="mainProduct" id="ume2">
-        <div class="item">
-          <div class="itemInnerPic">
-            <img
-              class="sakeume"
-              src="./Product/Product pic/product-1 (2).png"
-              alt=""
-            />
-          </div>
+        <!-- product list 清酒梅酒 -->
+        <div class="ume2" id="mainProduct">
+          <img
+            class="sakeume"
+            src="./Product/Product pic/product-1 (2).png"
+            alt="sakeume"
+          />
           <div class="itemInnerText">
             <h3>清酒梅酒</h3>
             <p>
               以清酒為基底釀造，其酒感較其他蒸餾酒款來的輕盈，<br />
               因各地的酒米及水質各有其優點，<br />
               因此不同酒造釀出的清酒也各有特色。
-              <br /><br />
-              | 商品規格 |
-              <br /><br />
             </p>
-            <table>
-              <tr>
-                <th>原料</th>
-                <td>梅、砂糖、純米酒</td>
-              </tr>
-              <tr>
-                <th>容量</th>
-                <td>720ml</td>
-              </tr>
-              <tr>
-                <th>酒精濃度</th>
-                <td>10%</td>
-              </tr>
-              <tr>
-                <th>產地</th>
-                <td>台灣</td>
-              </tr>
-            </table>
-            <p class="itemInnerTextWarning">
-              本商品不開放網路銷售，如欲洽詢或購買，請加入詢問清單
-            </p>
-            <button class="btn btn-primary shop-item-btn">
-              加入清單
-            </button>
+            <div class="itemSpec">
+              <p class="itemSpecTitle">| 商品規格 |</p>
+              <table>
+                <tr>
+                  <th>原料</th>
+                  <td>梅、砂糖、純米酒</td>
+                </tr>
+                <tr>
+                  <th>容量</th>
+                  <td>720ml</td>
+                </tr>
+                <tr>
+                  <th>酒精濃度</th>
+                  <td>10%</td>
+                </tr>
+                <tr>
+                  <th>產地</th>
+                  <td>台灣</td>
+                </tr>
+              </table>
+              <p class="itemInnerTextWarning">
+                本商品不開放網路銷售，欲洽詢或購買，請加入詢問清單
+              </p>
+              <button class="btn btn-primary shop-item-btn">加入清單</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- product list 威士忌梅酒 -->
-      <div class="mainProduct" id="ume3">
-        <div class="item">
-          <div class="itemInnerPic">
-            <img
-              class="whiskyume"
-              src="./Product/Product pic/product-7.png"
-              alt=""
+        <!-- product list 威士忌梅酒 -->
+        <div class="ume3" id="mainProduct">
+          <img
+            class="whiskyume"
+            src="./Product/Product pic/product-7.png"
+            alt="whiskyume"
             />
-          </div>
           <div class="itemInnerText">
             <h3>威士忌梅酒</h3>
             <p>
               有別於傳統梅酒，新穎的以威士忌為基底酒，<br />
               微微辛辣感的橡木桶酒香中還帶有青梅的清爽，<br />
               煙燻桶香與梅子精華交互出十足的大人系口味。
-              <br /><br />
-              | 商品規格 |
-              <br /><br />
             </p>
-            <table>
-              <tr>
-                <th>原料</th>
-                <td>梅、砂糖、燒酎、威士忌</td>
-              </tr>
-              <tr>
-                <th>容量</th>
-                <td>850ml</td>
-              </tr>
-              <tr>
-                <th>酒精濃度</th>
-                <td>25%</td>
-              </tr>
-              <tr>
-                <th>產地</th>
-                <td>台灣</td>
-              </tr>
-            </table>
+            <div class="itemSpec">
+              <p class="itemSpecTitle">| 商品規格 |</p>
+              <table>
+                <tr>
+                  <th>原料</th>
+                  <td>梅、砂糖、燒酎、威士忌</td>
+                </tr>
+                <tr>
+                  <th>容量</th>
+                  <td>850ml</td>
+                </tr>
+                <tr>
+                  <th>酒精濃度</th>
+                  <td>25%</td>
+                </tr>
+                <tr>
+                  <th>產地</th>
+                  <td>台灣</td>
+                </tr>
+              </table>
+            </div>
             <p class="itemInnerTextWarning">
-              本商品不開放網路銷售，如欲洽詢或購買，請加入詢問清單
+              本商品不開放網路銷售，欲洽詢或購買，請加入詢問清單
             </p>
-            <button class="btn btn-primary shop-item-btn">
-              加入清單
-            </button>
+            <button class="btn btn-primary shop-item-btn">加入清單</button>
           </div>
         </div>
-      </div>
 
-      <!-- product list 燒酌梅酒 -->
-      <div class="mainProduct" id="ume4">
-        <div class="item">
-          <div class="itemInnerPic">
-            <img
-              class="shoume"
-              src="./Product/Product pic/product-6.png"
-              alt=""
-            />
-          </div>
+        <!-- product list 燒酌梅酒 -->
+        <div class="ume4" id="mainProduct">
+          <img
+            class="shoume"
+            src="./Product/Product pic/product-6.png"
+            alt="shoume"
+          />
           <div class="itemInnerText">
             <h3>燒酌梅酒</h3>
             <p>
               使用嚴選神木村的青梅，並以自家釀製的米燒酒所釀製的梅屋燒酌梅酒。
-              <br /><br />
-              | 商品規格 |
-              <br /><br />
             </p>
-            <table>
-              <tr>
-                <th>原料</th>
-                <td>梅、砂糖、燒酌</td>
-              </tr>
-              <tr>
-                <th>容量</th>
-                <td>600ml</td>
-              </tr>
-              <tr>
-                <th>酒精濃度</th>
-                <td>12%</td>
-              </tr>
-              <tr>
-                <th>產地</th>
-                <td>台灣</td>
-              </tr>
-            </table>
+            <div class="itemSpec">
+              <p class="itemSpecTitle">| 商品規格 |</p>
+              <table>
+                <tr>
+                  <th>原料</th>
+                  <td>梅、砂糖、燒酌</td>
+                </tr>
+                <tr>
+                  <th>容量</th>
+                  <td>600ml</td>
+                </tr>
+                <tr>
+                  <th>酒精濃度</th>
+                  <td>12%</td>
+                </tr>
+                <tr>
+                  <th>產地</th>
+                  <td>台灣</td>
+                </tr>
+              </table>
+            </div>
             <p class="itemInnerTextWarning">
-              本商品不開放網路銷售，如欲洽詢或購買，請加入詢問清單
+              本商品不開放網路銷售，欲洽詢或購買，請加入詢問清單
             </p>
-            <button class="btn btn-primary shop-item-btn">
-              加入清單
-            </button>
+            <button class="btn btn-primary shop-item-btn">加入清單</button>
           </div>
         </div>
-      </div>
 
-      <!-- product list 泡盛梅酒 -->
-      <div class="mainProduct" id="ume5">
-        <div class="item">
-          <div class="itemInnerPic">
-            <img
-              class="awamoriume"
-              src="./Product/Product pic/whiskyume.png"
-              alt=""
-            />
-          </div>
+        <!-- product list 泡盛梅酒 -->
+        <div class="ume5" id="mainProduct">
+          <img
+            class="awamoriume"
+            src="./Product/Product pic/whiskyume.png"
+            alt="awamoriume"
+          />
           <div class="itemInnerText">
             <h3>泡盛梅酒</h3>
             <p>
               以琉球泡盛作為基底，主要強調梅子的優雅酸味。<br />
               推薦冰鎮後直接飲用，一口喝下之後，可以從後味感受到泡盛獨有的香氣，<br />
               是滋味非常清新的一款梅酒。
-              <br /><br />
-              | 商品規格 |
-              <br /><br />
             </p>
-            <table>
-              <tr>
-                <th>原料</th>
-                <td>梅、砂糖、泡盛</td>
-              </tr>
-              <tr>
-                <th>容量</th>
-                <td>600ml</td>
-              </tr>
-              <tr>
-                <th>酒精濃度</th>
-                <td>13%</td>
-              </tr>
-              <tr>
-                <th>產地</th>
-                <td>台灣</td>
-              </tr>
-            </table>
+            <div class="itemSpec">
+              <p class="itemSpecTitle">| 商品規格 |</p>
+              <table>
+                <tr>
+                  <th>原料</th>
+                  <td>梅、砂糖、泡盛</td>
+                </tr>
+                <tr>
+                  <th>容量</th>
+                  <td>600ml</td>
+                </tr>
+                <tr>
+                  <th>酒精濃度</th>
+                  <td>13%</td>
+                </tr>
+                <tr>
+                  <th>產地</th>
+                  <td>台灣</td>
+                </tr>
+              </table>
+            </div>
             <p class="itemInnerTextWarning">
-              本商品不開放網路銷售，如欲洽詢或購買，請加入詢問清單
+              本商品不開放網路銷售，欲洽詢或購買，請加入詢問清單
             </p>
-            <button class="btn btn-primary shop-item-btn">
-              加入清單
-            </button>
+            <button class="btn btn-primary shop-item-btn">加入清單</button>
+          </div>
         </div>
       </div>
 
@@ -549,7 +525,7 @@
     </script>
 
     <script>
-      // product list 橫排 產品箭頭往下功能 
+      // product list 橫排 產品箭頭往下功能
       const links = document.querySelectorAll(".productList ul a");
 
       for (const link of links) {
