update ls for list cart

--- a/product.html
+++ b/product.html
@@ -87,42 +87,44 @@
               <span>數量</span>
             </div>
 
-            <div class="list-row">
-              <img
+            <!-- <div class="list-row">
+              <div class="cart-Item">
+                <img
                 src="./Product/Product pic/product-2.png"
                 id="item-img"
                 alt=""
-              />
+                />
+              </div>
               <div class="list-text">
                 <p id="list-item-name" class="list-item-name">手工醉梅</p>
               </div>
               <div class="list-qty">
-                <input class="cart-qty-input" type="number" value="2" />
+                <input class="cart-qty-input" type="number" value="1" />
                 <button class="list-item-remove">移除</button>
               </div>
-            </div>
+            </div> -->
 
-            <div class="list-row">
-              <img
+            <!-- <div class="list-row">
+              <div class="cart-Item">
+                <img
                 src="./Product/Product pic/product-2.png"
                 id="item-img"
                 alt=""
               />
+              </div>
               <div class="list-text">
                 <p id="list-item-name" class="list-item-name">手工醉梅</p>
               </div>
               <div class="list-qty">
-                <input class="cart-qty-input" type="number" value="2" />
+                <input class="cart-qty-input" type="number" value="1" />
                 <button class="list-item-remove">移除</button>
               </div>
-            </div>
+            </div> -->
 
-            <hr />
-
-            <div class="list-row-total">
+            <!-- <div class="list-row-total">
               <strong class="list-total-title">Total</strong>
               <span class="list-total-qty">2</span>
-            </div>
+            </div> -->
 
             <div class="send-Btn">
               <input
@@ -195,12 +197,12 @@
       <div class="itemContainer">
         <div class="ume1" id="mainProduct">
           <img
-            class="ume"
+            class="itemImg"
             src="./Product/Product pic/product-2.png"
             alt="ume"
           />
           <div class="itemInnerText">
-            <h3>手工醉梅</h3>
+            <h3 class="itemTitle">手工醉梅</h3>
             <p>
               採用100%國產青梅 ，果肉厚實，是一款美味的梅子。<br />
               將其浸泡在糖和酒精中大約需要一年時間。<br />
@@ -237,12 +239,12 @@
         <!-- product list 清酒梅酒 -->
         <div class="ume2" id="mainProduct">
           <img
-            class="sakeume"
+            class="itemImg"
             src="./Product/Product pic/product-1 (2).png"
             alt="sakeume"
           />
           <div class="itemInnerText">
-            <h3>清酒梅酒</h3>
+            <h3 class="itemTitle">清酒梅酒</h3>
             <p>
               以清酒為基底釀造，其酒感較其他蒸餾酒款來的輕盈，<br />
               因各地的酒米及水質各有其優點，<br />
@@ -279,12 +281,12 @@
         <!-- product list 威士忌梅酒 -->
         <div class="ume3" id="mainProduct">
           <img
-            class="whiskyume"
+            class="itemImg"
             src="./Product/Product pic/product-7.png"
             alt="whiskyume"
             />
           <div class="itemInnerText">
-            <h3>威士忌梅酒</h3>
+            <h3 class="itemTitle">威士忌梅酒</h3>
             <p>
               有別於傳統梅酒，新穎的以威士忌為基底酒，<br />
               微微辛辣感的橡木桶酒香中還帶有青梅的清爽，<br />
@@ -321,12 +323,12 @@
         <!-- product list 燒酌梅酒 -->
         <div class="ume4" id="mainProduct">
           <img
-            class="shoume"
+            class="itemImg"
             src="./Product/Product pic/product-6.png"
             alt="shoume"
           />
           <div class="itemInnerText">
-            <h3>燒酌梅酒</h3>
+            <h3 class="itemTitle">燒酌梅酒</h3>
             <p>
               使用嚴選神木村的青梅，並以自家釀製的米燒酒所釀製的梅屋燒酌梅酒。
             </p>
@@ -361,12 +363,12 @@
         <!-- product list 泡盛梅酒 -->
         <div class="ume5" id="mainProduct">
           <img
-            class="awamoriume"
+            class="itemImg"
             src="./Product/Product pic/whiskyume.png"
             alt="awamoriume"
           />
           <div class="itemInnerText">
-            <h3>泡盛梅酒</h3>
+            <h3 class="itemTitle">泡盛梅酒</h3>
             <p>
               以琉球泡盛作為基底，主要強調梅子的優雅酸味。<br />
               推薦冰鎮後直接飲用，一口喝下之後，可以從後味感受到泡盛獨有的香氣，<br />
