update addToCarClicked function

--- a/product.html
+++ b/product.html
@@ -87,11 +87,11 @@
               <span>數量</span>
             </div>
 
-            <!-- <div class="list-row">
+            <div class="list-row">
               <div class="cart-Item">
                 <img
                 src="./Product/Product pic/product-2.png"
-                id="item-img"
+                class="item-img"
                 alt=""
                 />
               </div>
@@ -102,13 +102,13 @@
                 <input class="cart-qty-input" type="number" value="1" />
                 <button class="list-item-remove">移除</button>
               </div>
-            </div> -->
+            </div>
 
             <!-- <div class="list-row">
               <div class="cart-Item">
                 <img
                 src="./Product/Product pic/product-2.png"
-                id="item-img"
+                class="item-img"
                 alt=""
               />
               </div>
@@ -197,7 +197,7 @@
       <div class="itemContainer">
         <div class="ume1" id="mainProduct">
           <img
-            class="itemImg"
+            id="itemImg"
             src="./Product/Product pic/product-2.png"
             alt="ume"
           />
@@ -229,7 +229,7 @@
                 </tr>
               </table>
               <p class="itemInnerTextWarning">
-                本商品  不開放網路銷售，欲洽詢或購買，請加入詢問清單
+                本商品不開放網路銷售，欲洽詢或購買，請加入詢問清單
               </p>
               <button class="btn btn-primary shop-item-btn">加入清單</button>
             </div>
@@ -239,7 +239,7 @@
         <!-- product list 清酒梅酒 -->
         <div class="ume2" id="mainProduct">
           <img
-            class="itemImg"
+            id="itemImg"
             src="./Product/Product pic/product-1 (2).png"
             alt="sakeume"
           />
@@ -546,7 +546,7 @@
       }
     </script>
 
-    <script src="./project.js"></script>
+    <!-- <script src="./project.js"></script> -->
     <script src="./listcart.js" async></script>
   </body>
 </html>
